add expert information position & photo

--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,7 @@ select {
   font-size: 18px;
   font-weight: 400;
   color: #37393f;
-  line-height: 26.314px ; 
+  line-height: 26.314px;
 }
 
 .cabinFt {
@@ -31,8 +31,8 @@ select {
   font-weight: 700;
   color: #37393f;
   line-height: 48.4px;
-  
 }
+
 /* display stuff */
 .display {
   display: flex;
@@ -41,7 +41,8 @@ select {
 
 /* Header Section*/
 .collar_header,
-.work_section {
+.work_section,
+.expert_container {
   align-items: center;
   width: 100%;
   max-width: 76.25rem;
@@ -49,9 +50,11 @@ select {
   margin: 0 auto;
   margin-top: 52px;
 }
+
 .logo {
   margin-right: 195px;
 }
+
 .nav_links,
 .nav_links ul {
   display: flex;
@@ -87,13 +90,17 @@ select {
 }
 
 .process_block {
-  width: 283px;
+  width: 293px;
   margin: 0 auto;
 }
 
 .work_heading {
-  margin-bottom: 16px;
   text-align: center;
+  width: 348px;
+}
+
+.headerBt {
+  margin-bottom: 16px;
 }
 
 .info_block {
@@ -129,6 +136,7 @@ select {
 .bg_icon {
   margin: 10px auto;
 }
+
 /* Banner Section */
 .banner_section {
   position: relative;
@@ -153,6 +161,47 @@ select {
 .presentation_title {
   margin: 16px 21px;
 }
+
 .play_btn {
-  margin-top:47px;
+  margin-top: 47px;
+}
+
+/* Expert Section */
+.expert_container {
+  width: 1220px;
+  height: 659px;
+  text-align: center;
+  margin-bottom: 130px;
+}
+
+.process_block {
+  width: 293px;
+  margin: 0 auto;
+}
+
+.photo_container {
+  margin-top: 41px;
+  align-items: center;
+}
+
+.export_name {
+  font-size: 25px;
+}
+
+.statusFt {
+  color: #7d7d7d;
+  line-height: 24.334px;
+}
+
+.expert_image_box {
+  position: relative;
+}
+
+.export_info {
+  width: 341px;
+  position: absolute;
+  bottom: 22px;
+  left: 22px;
+  background-color: #ffffff;
+  padding: 24px 59px;
 }
