--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ font-family: 'Cabin', sans-serif;
 .interFt,
 select {
   font-family: "Inter", sans-serif;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 400;
   color: #37393f;
   line-height: 26.314px;
@@ -20,14 +20,14 @@ select {
 
 .cabinFt {
   font-family: "Cabin", sans-serif;
-  font-size: 18px;
+  font-size: 1.125rem;
   text-transform: capitalize;
   color: #fff;
 }
 
 .popinsFt {
   font-family: "Poppins", sans-serif;
-  font-size: 40px;
+  font-size: 2.5rem;
   font-weight: 700;
   color: #37393f;
   line-height: 48.4px;
@@ -46,13 +46,13 @@ select {
   align-items: center;
   width: 100%;
   max-width: 76.25rem;
-  height: 65px;
+  height: 4.0625rem;
   margin: 0 auto;
-  margin-top: 52px;
+  margin-top: 3.25rem;
 }
 
 .logo {
-  margin-right: 195px;
+  margin-right: 12.1875rem;
 }
 
 .nav_links,
@@ -66,12 +66,12 @@ select {
 
 .nav_links a,
 select {
-  margin-right: 30px;
+  margin-right: 1.875rem;
 }
 
 .navigation_container {
   display: flex;
-  gap: 40px;
+  gap: 2.5rem;
 }
 
 .consulting_btn {
@@ -83,34 +83,34 @@ select {
 /* Work Process Section */
 
 .work_section {
-  height: 510px;
+  height: 31.875rem;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: 136px;
+  margin-top: 8.5rem;
 }
 
 .process_block {
-  width: 293px;
+  width: 18.3125rem;
   margin: 0 auto;
 }
 
 .work_heading {
   text-align: center;
-  width: 348px;
+  width: 21.75rem;
 }
 
 .headerBt {
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
 }
 
 .info_block {
-  width: 1220px;
-  height: 383px;
-  margin-top: 41px;
+  width: 76.25rem;
+  height: 23.9375rem;
+  margin-top: 2.5625rem;
 }
 
 .info_content {
-  width: 386px;
+  width: 24.125rem;
   padding: 58px 43px;
   text-align: center;
   background-color: #f4f4f4;
@@ -146,12 +146,12 @@ select {
 
 .banner_section img {
   width: 100%;
-  max-width: 1920px;
+  max-width: 120rem;
 }
 
 .banner_content {
-  width: 511px;
-  height: 271px;
+  width: 31.9375rem;
+  height: 16.9375rem;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -168,14 +168,14 @@ select {
 
 /* Expert Section */
 .expert_container {
-  width: 1220px;
-  height: 659px;
+  width: 76.25rem;
+  height: 41.1875rem;
   text-align: center;
   margin-bottom: 130px;
 }
 
 .process_block {
-  width: 293px;
+  width: 18.3125rem;
   margin: 0 auto;
 }
 
@@ -198,7 +198,7 @@ select {
 }
 
 .export_info {
-  width: 341px;
+  width: 21.3125rem;
   position: absolute;
   bottom: 22px;
   left: 22px;
